@@ -3,6 +3,7 @@
 - Make themoviedb helper widgets open info
 - Standardise widget heights
 - Fix browse/play label
+- Fix for minimal busy loader on 1136 and filepath now playing overlap
 
 0.9.42
 - REQUIRES: plugin.video.themoviedb.helper
